wrapped hover in media query to avoid behaviour on mobile

--- a/src/style/components/mediaComponent.scss
+++ b/src/style/components/mediaComponent.scss
@@ -22,9 +22,11 @@
             width: 5rem;
             cursor:pointer;
 
-            &:hover{
-                transform: scale(.97);
-                filter: brightness(.7);
+            @media (hover:hover){
+                &:hover{
+                    transform: scale(.97);
+                    filter: brightness(.7);
+                }
             }
             &:active{
                 transform: scale(.92);
